--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
       // { type:'youtube', id:'', title:'Your YT Title', creator:'Channel', date:'2025-09-01', desc:'Short description here', tags:['event','montage'] },
 
       // 20 TikTok placeholders
-      { type:'tiktok', id:'https://www.tiktok.com/@epsilonflightprogram/video/7276878177941884206?lang=en', title:'TikTok #01', creator:'@epsilon_ops', date:'', desc:'', tags:['tiktok'] },
+      { type:'tiktok', id:'7276878177941884206', title:'TikTok #01', creator:'@epsilon_ops', date:'', desc:'', tags:['tiktok'] },
       { type:'tiktok', id:'', title:'TikTok #02', creator:'@epsilon_ops', date:'', desc:'', tags:['tiktok'] },
       { type:'tiktok', id:'', title:'TikTok #03', creator:'@epsilon_ops', date:'', desc:'', tags:['tiktok'] },
       { type:'tiktok', id:'', title:'TikTok #04', creator:'@epsilon_ops', date:'', desc:'', tags:['tiktok'] },
