--- a/index.html
+++ b/index.html
@@ -8,19 +8,10 @@
   <link rel="preconnect" href="https://www.tiktok.com" />
   <style>
     :root{
-      /* Epsilon blues */
-      --eps-900:#0b2f52;/* deep */
-      --eps-700:#134b8a;/* brand */
-      --eps-500:#1e79ff;/* accent */
-      --eps-300:#70b7ff;/* light */
-      --ink:#0b1620;    /* text */
-      --ink-2:#2a3442;  /* secondary text */
-      --paper:#f7fbff;  /* base */
-      --card:#ffffffee; /* frosted card */
-      --ring:rgba(30,121,255,.25);
-      --pop:0 12px 40px -10px rgba(30,121,255,.45);
-      --pop-2:0 8px 28px -8px rgba(0,0,0,.28);
-      --radius:18px;
+      --eps-900:#0b2f52; --eps-700:#134b8a; --eps-500:#1e79ff; --eps-300:#70b7ff;
+      --ink:#0b1620; --ink-2:#2a3442; --paper:#f7fbff; --card:#ffffffee;
+      --ring:rgba(30,121,255,.25); --pop:0 12px 40px -10px rgba(30,121,255,.45);
+      --pop-2:0 8px 28px -8px rgba(0,0,0,.28); --radius:18px;
     }
     *{box-sizing:border-box} html,body{height:100%} html{scroll-behavior:smooth}
     body{margin:0;font-family:ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Inter,Arial;color:var(--ink);background:var(--paper)}
