--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <img class="logo" src="assets/epsilon-program.png" alt="Epsilon Program Logo" />
         <div>
           <h1 class="title">Epsilon Program • Featured Clips</h1>
-          <p class="subtitle">TikTok & YouTube, simple and clean.</p>
+          <p class="subtitle">TikTok & YouTube! </p>
           <div class="quicklinks">
             <a class="ql" href="#tiktok">TikToks</a>
             <a class="ql" href="#youtube">YouTube</a>
@@ -126,7 +126,7 @@
     <div id="gridYouTube" class="grid grid-youtube"></div>
   </main>
 
-  <footer>Built with 💙 in Epsilon Blue</footer>
+  <footer>Built with 💙</footer>
 
   <script>
     /* TikTok now supports caption, hashtags, likes, comments */
