--- a/pilots.html
+++ b/pilots.html
@@ -57,7 +57,7 @@
 
     <section class="intro">
       <strong>Who flies the Epsilon skies?</strong>
-      <p>From precision aerobatics to cinematic pursuit shots, this crew keeps Epsilon in the air and on your screen.</p>
+      <p>Pilots who are flying formation and stunting with the Epsilon Flight Program!</p>
     </section>
 
     <h2>Pilots</h2>
@@ -66,7 +66,7 @@
     <h2>Stunt Pilots</h2>
     <section class="grid" id="stunts"></section>
 
-    <footer>Easy to edit: just update the <code>PILOTS</code> and <code>STUNTS</code> arrays.</footer>
+    <footer>Join Our Discord </footer>
   </div>
 
   <script>
