--- a/pilots.html
+++ b/pilots.html
@@ -71,11 +71,11 @@
 
   <script>
     const PILOTS = [
-      { name:'Tonan', role:'Owner • Formation Pilot • Trainer • Stunting God', aircraft:['Molotok','Mallard'], bio:'Owner and lead architect of the Epsilon skies. Precision meets showtime.', avatar:'assets/pilots/tonan.jpg', links:[['YouTube','#'],['TikTok','#']] },
-      { name:'Penguin', role:'Co‑Owner • Lead Formation • Camera', aircraft:['Molotok','Nimbus'], bio:'Leads the stack and frames the money shots in Epsilon blue.', avatar:'assets/pilots/penguin.jpg', links:[['TikTok','#']] },
+      { name:'Tonan', role:'Owner • Formation Pilot • Trainer • Stunting God', aircraft:['Molotok','Mallard'], bio:'', avatar:'assets/pilots/tonan.jpg', links:[['YouTube','#'],['TikTok','#']] },
+      { name:'Penguin', role:'Co‑Owner • Lead Formation • Camera', aircraft:['Molotok','Nimbus'], bio:'', avatar:'assets/pilots/penguin.jpg', links:[['TikTok','#']] },
       { name:'Sterben', role:'Formation Pilot', aircraft:['Molotok'], bio:'haha', avatar:'assets/pilots/sterben.jpg', links:[['YouTube','#']] },
-      { name:'F1r3', role:'Pilot • Sometimes Stunter • Wheelman', aircraft:['Molotok'], bio:'Flight team pilot with a heavy right foot — mostly driving cars when not in the sky.', avatar:'assets/pilots/f1r3.jpg', links:[['TikTok','#']] },
-      { name:'Mammal', role:'Formation Pilot • Newest Member', aircraft:['Molotok','Raiju'], bio:'Newest addition to the flight team — crisp lines and calm comms.', avatar:'assets/pilots/mammal.jpg', links:[['YouTube','#']] },
+      { name:'F1r3', role:'Pilot • Sometimes Stunter • Wheelman', aircraft:['Molotok'], bio:'', avatar:'assets/pilots/f1r3.jpg', links:[['TikTok','#']] },
+      { name:'Mammal', role:'Formation Pilot • Newest Member', aircraft:['Molotok','Raiju'], bio:'', avatar:'assets/pilots/mammal.jpg', links:[['YouTube','#']] },
     ];
 
     const STUNTS = [
