--- a/index.html
+++ b/index.html
@@ -210,7 +210,10 @@
     ];
 
     const YOUTUBE_VIDEOS = [
-      { id:'', title:'YouTube Placeholder', desc:'Add your description here.' }
+       { id:'5L3IM47FrFs', title:'Danger Zone', desc:'' },                       // add description if you like
+  { id:'1AwOgU_Q-g0', title:'The forgotten branch of the LS River', desc:'' },
+  { id:'gLjkoHCfogU', title:'EFP 1 year(ish) anniversary!', desc:'' },
+  { id:'Z6ukhVU7Nvc', title:'Epsilon Fail Program', desc:'' },
     ];
 
     function fmtNum(n){
