--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
             <a class="ql" href="#tiktok">TikToks</a>
             <a class="ql" href="#youtube">YouTube</a>
             <a class="ql" href="pilots.html">✈ Meet the Pilots</a>
+             <a class="ql" href="flight.html">Sample Flight Show</a>
           </div>
         </div>
       </div>
@@ -137,12 +138,12 @@
     const TIKTOK_VIDEOS = [
       {
         id:'7276878177941884206',
-        title:'Molotok Pass',
-        desc:'Knife-edge over the bay.',
-        caption:'Molotok skims the bay for the cleanest pass of the night.',
-        hashtags:['molotok','formation','epsilonblue'],
-        likes: 12400,
-        comments: 389
+        title:'',
+        desc:'',
+        caption:'',
+        hashtags:[''],
+        likes:null,
+        comments:null
       },
       {
         id:'7146608518362189099',
@@ -210,7 +211,7 @@
     ];
 
     const YOUTUBE_VIDEOS = [
-       { id:'5L3IM47FrFs', title:'Danger Zone', desc:'' },                       // add description if you like
+       { id:'5L3IM47FrFs', title:'Danger Zone', desc:'' },                      
   { id:'1AwOgU_Q-g0', title:'The forgotten branch of the LS River', desc:'' },
   { id:'gLjkoHCfogU', title:'EFP 1 year(ish) anniversary!', desc:'' },
   { id:'Z6ukhVU7Nvc', title:'Epsilon Fail Program', desc:'' },
