--- a/pilots.html
+++ b/pilots.html
@@ -74,7 +74,7 @@
       { name:'Tonan', role:'Owner • Formation Pilot • Trainer • Stunting God', aircraft:['Molotok','Mallard'], bio:'', avatar:'assets/pilots/tonan.jpg', links:[['YouTube','#'],['TikTok','#']] },
       { name:'Penguin', role:'Co‑Owner • Lead Formation • Camera', aircraft:['Molotok','Nimbus'], bio:'', avatar:'assets/pilots/penguin.jpg', links:[['TikTok','#']] },
       { name:'Sterben', role:'Formation Pilot', aircraft:['Molotok'], bio:'haha', avatar:'assets/pilots/sterben.jpg', links:[['YouTube','#']] },
-      { name:'F1r3', role:'Pilot • Sometimes Stunter • Wheelman', aircraft:['Molotok'], bio:'', avatar:'assets/pilots/f1r3.jpg', links:[['TikTok','#']] },
+      { name:'F1r3', role:'Pilot • Sometimes Stunter • Wheelman', aircraft:['Molotok'], bio:'', avatar:'assets/pilots/fire.jpg', links:[['TikTok','#']] },
       { name:'Mammal', role:'Formation Pilot • Newest Member', aircraft:['Molotok','Raiju'], bio:'', avatar:'assets/pilots/mammal.jpg', links:[['YouTube','#']] },
     ];
 
